--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -173,6 +173,7 @@ $board-size: 640px;
 		font-size: 30px;
 		border-radius: 5px;
 		margin-left: 20px;
+		box-sizing: border-box;
 
 		.piece-log {
 			display: flex;
@@ -203,6 +204,7 @@ $board-size: 640px;
 			flex-direction: column;
 			background-color: rgb(45, 45, 45);
 			padding: 15px 10px 15px 10px;
+			box-sizing: border-box;
 			color: white;
 			justify-content: center;
 			align-items: flex-start;
@@ -212,6 +214,13 @@ $board-size: 640px;
 
 		.inner > .name {
 			margin-left: 15px;
+			display: flex;
+			flex-direction: row;
+		}
+
+		.inner > .name > div:last-child {
+			margin-left: 10px;
+			color: lightgray;
 		}
 
 		.inner > .MuiDivider-root {
@@ -330,6 +339,25 @@ $board-size: 640px;
 	.promotion-column > div > img {
 		width: $board-size * 3 / 32;
 		height: $board-size * 3 / 32;
+	}
+
+	@media only screen and (max-width: 1520px) {
+		#main {
+			flex-direction: column;
+		}
+
+		#center {
+			margin-left: 0px;
+		}
+
+		#right {
+			width: 100%;
+		}
+
+		.control {
+			width: 100%;
+			margin-left: 0px;
+		}
 	}
 
 	@media only screen and (max-width: 700px) {
