--- a/src/multi/Multi.scss
+++ b/src/multi/Multi.scss
@@ -35,6 +35,14 @@
 				height: 64px;
 			}
 
+			.top > .inner {
+				display: flex;
+				justify-content: space-between;
+				width: 100%;
+				padding-right: 10px;
+				box-sizing: border-box;
+			}
+
 			.join-btn:not(.Mui-disabled) {
 				background-color: #266308;
 			}
@@ -64,7 +72,7 @@
 		justify-content: flex-start;
 		align-items: center;
 
-		#colors {
+		.options {
 			width: 90%;
 			display: flex;
 			flex-direction: row;
@@ -72,17 +80,17 @@
 			margin-bottom: 10px;
 		}
 
-		#colors > .MuiButton-root {
+		.options > .MuiButton-root {
 			background-color: silver !important;
 			color: white;
 		}
 
-		#colors > .MuiButton-root.selected {
+		.options > .MuiButton-root.selected {
 			background-color: lightblue !important;
 			color: black;
 		}
 
-		#colors > .MuiButton-root:last-child {
+		.options > .MuiButton-root:not(:first-child) {
 			margin-left: 10px;
 		}
 
