--- a/src/multi/Multi.scss
+++ b/src/multi/Multi.scss
@@ -1,14 +1,47 @@
+$board-size: 96px;
+
 #multi {
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
 
+	.preview-board {
+		display: flex;
+		flex-direction: column;
+		background-color: red;
+		width: $board-size;
+		height: $board-size;
+	}
+
+	.preview-board > .row {
+		display: flex;
+		flex-direction: row;
+		.square {
+			display: flex;
+			flex-direction: row;
+			width: $board-size / 8;
+			height: $board-size / 8;
+		}
+
+		.square.dark {
+			background-color: #d18b47;
+		}
+
+		.square.light {
+			background-color: #ffce9e;
+		}
+	}
+
 	#rooms {
+		overflow-y: scroll;
+		width: 100%;
 		padding: 10px 0px 0px 10px;
 		display: grid;
 
-		grid-template-columns: repeat(3, max-content);
+		grid-template-rows: repeat(4, max-content);
+		grid-template-columns: repeat(4, max-content);
 		column-gap: 10px;
+		row-gap: 10px;
 
 		.room {
 			background-color: rgb(42, 42, 42);
@@ -18,6 +51,7 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
+			// align-items: flex-end;
 
 			.top {
 				margin: 10px 10px 10px 10px;
@@ -38,9 +72,36 @@
 			.top > .inner {
 				display: flex;
 				justify-content: space-between;
+				align-items: center;
 				width: 100%;
 				padding-right: 10px;
+				height: 100%;
 				box-sizing: border-box;
+			}
+
+			.top > .inner > .players {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: flex-start;
+			}
+			.top > .inner > .players > .player {
+				display: flex;
+				flex-direction: row;
+				align-items: flex-start;
+				position: relative;
+				font-size: 20px;
+			}
+			.top > .inner > .players > .player > .color {
+				position: absolute;
+				display: flex;
+				flex-direction: row;
+				font-size: 12px;
+				font-family: Arial;
+
+				margin-left: 2px;
+				color: lightgray;
+				top: 0;
 			}
 
 			.join-btn:not(.Mui-disabled) {
