--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -218,6 +218,14 @@ $board-size: 640px;
 			flex-direction: row;
 		}
 
+		.inner > .controls {
+			// margin-left: 15px;
+			display: flex;
+			flex-direction: row;
+			width: 100%;
+			justify-content: flex-end;
+		}
+
 		.inner > .name > div:last-child {
 			margin-left: 10px;
 			color: lightgray;
@@ -286,6 +294,10 @@ $board-size: 640px;
 	.square > .indicator {
 		font-weight: bold;
 		font-size: 16px;
+	}
+
+	.square.checked {
+		background: radial-gradient(ellipse at center, rgb(255, 0, 0) 0%, rgb(231, 0, 0) 25%, rgba(169, 0, 0, 0) 89%, rgba(158, 0, 0, 0) 100%);
 	}
 
 	.square.dark {
