--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -175,6 +175,31 @@ $board-size: 640px;
 		margin-left: 20px;
 		box-sizing: border-box;
 
+		.timer {
+			font-size: 50px;
+			color: lightgray;
+			background-color: rgb(45, 45, 45);
+			padding: 2px 15px 2px 15px;
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+		}
+
+		// .timer > div {
+		// 	color: rgb(112, 112, 112);
+		// }
+
+		.timer.top {
+			border-top-right-radius: 5px;
+			border-top-left-radius: 5px;
+		}
+		.timer.bottom {
+			border-bottom-right-radius: 5px;
+			border-bottom-left-radius: 5px;
+			box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+		}
+
 		.piece-log {
 			display: flex;
 			justify-content: flex-start;
@@ -197,7 +222,7 @@ $board-size: 640px;
 		}
 
 		.inner {
-			margin: 10px 0px 10px 0px;
+			// margin: 10px 0px 10px 0px;
 			width: 100%;
 			height: max-content;
 			display: flex;
@@ -209,7 +234,23 @@ $board-size: 640px;
 			justify-content: center;
 			align-items: flex-start;
 			font-size: 30px;
-			border-radius: 5px;
+			// border-radius: 5px;
+			position: relative;
+			box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+		}
+		.inner > .progress-bar {
+			transition: 0.1s;
+			width: 100%;
+			height: 5px;
+			background-color: lightblue;
+			position: absolute;
+			left: 0;
+		}
+		.inner > .progress-bar.top {
+			top: 0;
+		}
+		.inner > .progress-bar.bottom {
+			bottom: 0;
 		}
 
 		.inner > .name {
