--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -6,18 +6,21 @@
 		top: 0;
 		left: 0;
 		position: fixed;
-		justify-content: center;
+		justify-content: space-between;
 		align-items: center;
 		flex-direction: row;
+		padding: 20px;
+		box-sizing: border-box;
 	}
 
-	#main > .mode:not(:last-child) {
-		margin-right: 150px;
-	}
+	// #main > .mode:not(:last-child) {
+	// 	margin-right: 150px;
+	// }
 
 	.mode {
 		width: 700px;
 		height: 700px;
+		box-sizing: border-box;
 		background-color: #5b5b5b;
 		display: flex;
 		justify-content: center;
@@ -49,6 +52,38 @@
 			box-sizing: border-box;
 			border-bottom-left-radius: 25px;
 			border-bottom-right-radius: 25px;
+		}
+	}
+
+	@media only screen and (max-width: 1460px) {
+		.mode {
+			width: 47.9vw;
+			height: 47.9vw;
+		}
+	}
+
+	@media only screen and (max-width: 1020px) {
+		#main {
+			flex-direction: column-reverse;
+			justify-content: center;
+		}
+
+		.mode {
+			width: 300px;
+			height: 300px;
+		}
+
+		.mode:first-child {
+			margin-top: 10px;
+		}
+
+		.mode > .title {
+			font-size: 40px;
+		}
+
+		.mode > .icon > svg {
+			width: 128px;
+			height: 128px;
 		}
 	}
 }
