--- a/src/game/Game.scss
+++ b/src/game/Game.scss
@@ -414,13 +414,75 @@ $board-size: 640px;
 		}
 
 		.control {
-			width: 100%;
+			width: $board-size;
+			height: auto;
 			margin-left: 0px;
+			flex-direction: row-reverse;
+			justify-content: space-between;
+			background-color: rgb(88, 88, 88);
+		}
+
+		#left > .control {
+			margin-top: 0px;
+			margin-bottom: 5px;
+		}
+		#right > .control {
+			margin-top: 5px;
+			margin-bottom: 0px;
+		}
+
+		.control > .timer {
+			height: 100% !important;
+
+			border-radius: 5px;
+			position: static;
+			box-sizing: border-box;
+		}
+
+		.control > .inner {
+			background: none;
+			box-shadow: none;
+			width: max-content;
+			padding: 0px;
+			margin: 0px;
+			// flex-grow: 1;
+			width: 100%;
+			display: flex;
+			position: static;
+		}
+
+		.control > .inner > .name {
+			margin: 0px;
+			padding-left: 2px;
+		}
+		.control > .inner > .name > div {
+			margin: 0px !important;
+		}
+
+		.control > .inner > .piece-log {
+			width: 100%;
+			box-sizing: border-box;
+
+			padding: 0px 0px 5px 2px;
+		}
+
+		.control > .inner > .piece-log > img {
+			width: 32px;
+			height: 32px;
 		}
 	}
 
 	@media only screen and (max-width: 700px) {
 		$board-size: 91.42vw;
+
+		.control {
+			width: $board-size;
+		}
+
+		.control > .inner > .piece-log > img {
+			width: 4.57vw;
+			height: 4.57vw;
+		}
 
 		#header {
 			font-size: 5vw;
@@ -524,6 +586,22 @@ $board-size: 640px;
 		.promotion-column > div > img {
 			width: $board-size * 3 / 32;
 			height: $board-size * 3 / 32;
+		}
+
+		.control > .inner {
+			font-size: 4.28vw;
+		}
+
+		.control > .timer {
+			font-size: 7.14vw;
+		}
+		#left > .control {
+			margin-top: 0px;
+			margin-bottom: 2.14vw;
+		}
+		#right > .control {
+			margin-top: 2.14vw;
+			margin-bottom: 0px;
 		}
 	}
 }
