--- a/src/multi/Multi.scss
+++ b/src/multi/Multi.scss
@@ -13,6 +13,16 @@ $board-size: 96px;
 		height: $board-size;
 	}
 
+	.elo {
+		color: white;
+		font-size: 20px;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		margin-left: 5px;
+		margin-bottom: 5px;
+	}
+
 	.preview-board > .row {
 		display: flex;
 		flex-direction: row;
